<resources>
    <string name="app_name">小车遥控器</string>
    <string name="app_name2">STM32小车遥控器</string>

    <!-- Sample menu -->
    <string name="action_toggle">Toggle Side Panel</string>

    <!-- Drawer Items -->
    <string name="drawer_item_first">远距遥控</string>
    <string name="drawer_item_second">一米自主触碰</string>
    <string name="drawer_item_third">三米自主触碰</string>
    <string name="drawer_item_fourth">越障触碰</string>
    <string name="drawer_item_fifth">查找蓝牙设备</string>
    <string name="drawer_item_sixth">可被发现</string>
    <string name="drawer_item_seventh">Seventh item</string>
    <string name="drawer_item_eighth">Eighth item</string>
    <string name="drawer_item_ninth">Ninth item</string>
    <string name="drawer_item_tenth">Tenth item</string>
    <string name="drawer_item_eleventh">Eleventh item</string>
    <string name="drawer_item_twelfth">Twelfth item</string>

    <!--蓝牙部分-->
    <string name="hello">Hello World, LearnActivity!</string>
    <string name="open">开启蓝牙</string>
    <string name="close">关闭蓝牙</string>
    <string name="send">发送</string>
    <string name="not_connected">不能连接这个设备</string>
    <string name="bt_not_enabled_leaving">蓝牙被禁止，正在退出聊天.</string>
    <string name="title_connecting">正在连接</string>
    <string name="title_connected_to">已连接</string>
    <string name="title_not_connected">未连接</string>
    <!-- DeviceListActivity -->
    <string name="scanning">正在扫描蓝牙服务</string>
    <string name="select_device">选择一个蓝牙设备</string>
    <string name="remote_ctrl">项目1：遥控触碰</string>
    <string name="none_paired">没有可配对的蓝牙设备</string>
    <string name="none_found">未发现蓝牙设备</string>
    <string name="title_paired_devices">可配对的设备</string>
    <string name="title_other_devices">其他可利用的设备</string>
    <string name="button_scan">扫描蓝牙设备</string>
    <!-- Options Menu -->
    <string name="connect">连接蓝牙设备</string>
    <string name="discoverable">可被发现</string>
    <string name="item1_remote_ctrl">1.遥控触碰</string>
    <string name="item2_auto_ctrl_1m">2.一米自主触碰</string>
    <string name="item3_auto_ctrl_3m">3.三米自主触碰</string>
    <string name="item4_auto_avoid_obstacle">4.越障触碰</string>
    <!-- test1 remote ctrl menu -->
    <string name="up">上</string>
    <string name="left">左</string>
    <string name="down">下</string>
    <string name="right">右</string>
    <string name="stop">停止</string><string name="fire">发射</string>
    <string name="random">随机数</string>


</resources>
