<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
	    <Button
	        android:layout_width="80dp"
	        android:layout_height="wrap_content"	        
	        android:onClick="onClick_Up"
	        android:text="@string/up" />
	</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
	        android:layout_width="80dp"
	        android:layout_height="wrap_content"
	        android:onClick="onClick_Left"
	        android:text="@string/left" />

        <Button
	        android:layout_width="80dp"
	        android:layout_height="wrap_content"
	        android:onClick="onClick_Down"
	        android:text="@string/down" />
        
        <Button
	        android:layout_width="80dp"
	        android:layout_height="wrap_content"
	        android:onClick="onClick_Right"
	        android:text="@string/right" />
    </LinearLayout>
    
    
    
</LinearLayout>
